Changelog
=========

1.17-dev - (unreleased)
-----------------------

1.16 - (2010-10-18)
-------------------
 * Change: Cleaned source code of agx generated structures [tiberich]
 * Feature: redirect to parent assessment when visiting an AssessmentPart [tiberich #3761]

1.15 - (2010-10-15)
-------------------
 * Bug fix: add a missing import [tiberich]

1.14 - (2010-10-14)
-------------------
 * Bug fix: change tests to hardcode less info about Specifications schema [tiberich]
 * Feature: add @@ims_wrong_assessment_versions page [tiberich #3753]
 * Feature: add readiness check that the assessments have the right version id [tiberich #3753]
 * Bug fix: Add IndicatorFactSheets to ims_timeline and ims_overview [tiberich #3754]
 * Change: Change the way H1 headers are get their icons in stylesheet and templates [tiberich]

1.13 - (2010-10-08)
-------------------
 * Bug fix: Uncomment comment in assign_version that was providing IVersionEnhanced for specs;
 Make assessments provide IVersionEnhanced when specification gets a new version reassigned [tiberich #3650]

1.12 - (2010-10-07)
-------------------
 * Bug fix: fix reassign version bug; add test for that [tiberich #3650]

1.11 - (2010-10-07)
-------------------
 * 

1.10 - (2010-10-07)
-------------------
 * Feature: automatically reassign version for children Assessments when changing version
   for a Specification [tiberich #3736]

1.9 - (2010-10-06)
------------------
 * Bug fix: for ims_timeline: remove assessment id from code that puts together the 
   children of a specification [tiberich #3741]
 * Bug fix: use object review state for display in timeline [tiberich]
 * Allow editors to link an specifications as versioned if the code is not unique [tiberich #3650]

1.8 - (2010-09-30)
------------------
 * Feature: Show external data references when in assessment view [demarant #3732]
 * Change: No longer need redefinitions for ObjectReadinessView for specs and assessments [tiberich #3694]