@@ -1,0 +1,31 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+  metal:use-macro="here/main_template/macros/master"
+  i18n:domain="indicators">
+  <head>
+    <metal:slot fill-slot="head_slot">
+      <title>Permissions Overview for Indicators Database</title>
+    </metal:slot>
+    <metal:slot fill-slot="css_slot">
+      <link type="text/css" rel="stylesheet" media="all" tal:attributes="href string:$portal_url/indicators.css" />
+    </metal:slot>
+    <metal:slot fill-slot="javascript_head_slot">
+      <script type="text/javascript" tal:attributes="src context/++resource++indicators-reports.js" ></script>
+    </metal:slot>
+  </head>
+  <body>
+    <div metal:fill-slot="main">
+      <h1>Indicators that have wrong version ids</h1>
+      <ul>
+        <li tal:repeat="obj view/wrongs">
+          <strong tal:content="obj/portal_type">Specification</strong> - 
+          <a href="" tal:attributes="href string:${obj/absolute_url}/@@wrong_versions_report" 
+            tal:content="obj/Title">Specification title</a> 
+          <tal:rep repeat="setcode obj/getCodes">
+            <span tal:content="python:setcode['set'] + ' ' + setcode['code']" />&nbsp;
+          </tal:rep>
+          <input type="button" class="fix_btn" value="+" />
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
